migrated to java 21