@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
@@ -25,7 +26,7 @@ public abstract class AbstractMultiLanguageInitializationAspect extends Abstract
 	private static String translate(String langFrom, String langTo, String text) throws IOException {
 		final var urlStr = "https://script.google.com/macros/s/AKfycby_k95UjogH_lhEjy6CGYUW6wZg2ELAKQIp3uB5Iw2PExxRx1RV/exec" + "?q=" + URLEncoder.encode(text, UTF_8) + "&target="
 				+ langTo + "&source=" + langFrom;
-		final var url = new URL(urlStr);
+		final var url =  URL.of(URI.create(urlStr), null);
 		final var con = url.openConnection();
 		con.setRequestProperty("User-Agent", "Mozilla/5.0");
 		try (var in = new BufferedReader(new InputStreamReader(con.getInputStream(), UTF_8)))
